manifests/argocd.yml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
