manifests/dashboard.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
